# openscripty

./: .gitignore  README.md  TODO.md  cli.py  inspect_function.py  main.py  pyproject.toml  requirements-cli.txt  requirements.txt  run_code.py  test.py  test_schema_validation.py
maketools/: __init__.py  app.py
maketools/agents/: __init__.py  code.py  tester.py  tool.py  triage.py
maketools/agents/templates/: template_manager.py
maketools/controllers/: base.py
maketools/db/: __init__.py  db.py
maketools/models/: base.py  conversation.py  tool.py
maketools/schemas/: __init__.py  conversation.py  tool.py
maketools/services/: code_executor.py  conversation.py  files.py  tool.py
maketools/tests/: test_files.py
maketools/tools/: __init__.py  code_executor.py  converter.py  files.py  tool.py
scripty/: __init__.py  app.py
scripty/agents/: __init__.py  code.py  script.py  tester.py  triage.py
scripty/agents/templates/: script.j2  template_manager.py  triage.j2
scripty/controllers/: base.py
scripty/db/: db.py
scripty/models/: conversation.py  script.py
scripty/schemas/: __init__.py  conversation.py  script.py  tester.py
scripty/services/: code_executor.py  conversation.py  files.py  script.py
scripty/tests/: test_files.py
scripty/tools/: __init__.py  code_executor.py  converter.py  files.py  script.py
test_new_function/: function_pydantic.json  function_pydantic.py  function_simple.json
test_new_funtion/: function_pydantic.json  function_pydantic.py  function_simple.py
