[project]
name = "openscripty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "openai-agents>=0.0.17",
    "pandas>=2.3.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "sseclient>=0.0.27",
    "uvicorn>=0.34.3",
]
